--- a/app.yaml
+++ b/app.yaml
@@ -1,18 +1,39 @@
+#runtime: nodejs18
+#service: server2
+#
+#instance_class: F1
+#
+#env_variables:
+#  NODE_ENV: production
+#
+#entrypoint: node server.js
+#
+#automatic_scaling:
+#  target_cpu_utilization: 0.65
+#  min_instances: 1
+#  max_instances: 10
+#
+#handlers:
+#  - url: /.*
+#    script: auto
+
+
 runtime: nodejs18
-service: server2
+service: app2
 
 instance_class: F1
 
-env_variables:
-  NODE_ENV: production
-
-entrypoint: node server.js
-
-automatic_scaling:
-  target_cpu_utilization: 0.65
-  min_instances: 1
-  max_instances: 10
-
 handlers:
-  - url: /.*
-    script: auto
+  - url: /static
+    static_dir: build/static
+
+  - url: /assets
+    static_dir: build/assets
+
+  - url: /(.*\.(json|ico|js))$
+    static_files: build/\1
+    upload: build/.*\.(json|ico|js)$
+
+  - url: .*
+    static_files: build/index.html
+    upload: build/index.html
