--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^4.48.1",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
+    "react-audio-visualize": "^1.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
