--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.10.0",
+    "js-cookie": "^3.0.5",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.48.1",
     "pdf-parse": "^1.1.1",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-color": "^3.0.12",
     "webpack-cli": "^5.1.4"
   }
